Fix scrollbar color inconsistency in dark mode

--- a/viewer/viewer.css
+++ b/viewer/viewer.css
@@ -6077,6 +6077,7 @@ body.wait::before{
   inset:var(--toolbar-height) 0 0;
   outline:none;
   z-index:0;
+  color-scheme: light !important;
 }
 
 #viewerContainer:not(.pdfPresentationMode){
